Implemented  two things
Implemented Authentication logic and Database Migration
